--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3,3 +3,5 @@ en:
     yearly_review:
       title: "Yearly Review"
       report_created: "The review topic has been created!"
+      settings_link_text: "Configure review topic settings"
+      create_review_topic: "Create Review Topic"
