--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -12,6 +12,10 @@ en:
       likes_given: "Most Likes Given"
       likes_received: "Most Likes Received"
       visits: "Most Visits"
+      featured_badge: "Users Granted the %{badge_name} Badge"
+      most_liked_topics: "Most Liked Topics"
+      most_liked_posts: "Most Liked Posts"
+      most_replied_to_topics: "Most Replied to Topics"
     action:
       topics_created: "Topics"
       replies_created: "Replies"
@@ -22,22 +26,6 @@ en:
     topics: "Topics"
     replies: "Replies"
     visits: "Visits"
-    most_likes_given: "Most Likes Given"
-    most_popular_topics: "Most Popular Topics"
-    most_liked_topics:
-      title: "Most Liked Topics"
-      action: "Likes"
-      type: "Topics"
-    most_replied_to_topics:
-      title: "Most Replied to Topics"
-      action: "Replies"
-      type: "topics"
-    most_liked_posts:
-      title: "Most Liked Posts"
-      action: "Likes"
-      type: "Posts"
-    featured_badge:
-      title: "Users Granted the %{badge_name} Badge"
     review_bot:
       bio: "I'm just here to create review topics."
   system_messages:
