--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,11 +1,11 @@
 en:
   site_settings:
     yearly_review_enabled: "Enable the yearly review."
-    yearly_review_title: "The title for the review topic."
     yearly_review_categories: "The categories to pull data from. If left blank will default to all public categories."
     yearly_review_publish_category: "The category the review will be published in."
     yearly_review_featured_badge: "Show users who have earned the badge during 2018."
   yearly_review:
+    topic_title: "%{year} in Review"
     title:
       topics_created: "Most Topics Created"
       replies_created: "Most Replies Created"
