--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -17,6 +17,7 @@ en:
       most_liked_topics: "Most Liked Topics"
       most_liked_posts: "Most Liked Posts"
       most_replied_to_topics: "Most Replied to Topics"
+      most_bookmarked_topics: "Most Bookmarked Topics"
     action:
       topics_created: "Topics"
       replies_created: "Replies"
