Group topic tables by category

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -26,8 +26,17 @@ en:
       likes_given: "Likes"
       likes_received: "Likes"
       visits: "Days Visited"
+    rank_type_title:
+      most_liked: "Most Liked"
+      most_replied_to: "Most Replies"
+      most_popular: "Most Popular"
+      most_boomarked: "Most Bookmarked"
     user: "User"
     topics: "Topics"
+    topic: "Topic"
+    likes: "Likes"
+    bookmarks: "Bookmarks"
+    score: "Score"
     replies: "Replies"
     visits: "Visits"
     more_badge_users: "And %{more} more..."
