--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,10 +1,10 @@
 en:
   site_settings:
     yearly_review_enabled: "Enable the yearly review."
-    yearly_review_categories: "The categories to pull data from. If left blank will default to all public categories."
+    yearly_review_categories: "The categories to pull topics from. If left blank will default to all public categories."
     yearly_review_exclude_staff: "Exclude Staff from user stats."
     yearly_review_publish_category: "The category the review will be published in."
-    yearly_review_featured_badge: "Show users who have earned the badge during 2018."
+    yearly_review_featured_badge: "Enter the full badge name."
   yearly_review:
     topic_title: "%{year}: The Year in Review"
     title:
