--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -10,8 +10,8 @@ en:
     title:
       users_section: "%{year}'s top Users"
       topics_section: "%{year}'s top Topics"
-      topics_created: "Most Topics Created"
-      replies_created: "Most Replies Created"
+      topics_created: "Most Topics"
+      replies_created: "Most Replies"
       likes_given: "Most Likes Given"
       likes_received: "Most Likes Received"
       visits: "Most Visits"
