Add user_visits_link to user_visits section if the user directory is enabled

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -16,6 +16,7 @@ en:
       likes_given: "Most Likes Given"
       likes_received: "Most Likes Received"
       visits: "Most Visits"
+      daily_visits: "Daily Visits"
       time_read: "Most Time Reading"
       most_replied_to: "Most Replied to"
       featured_badge: "Users Granted the %{badge_name} Badge"
@@ -45,6 +46,9 @@ en:
         most_bookmarked: "Bookmarks"
         most_read: "Hours Read"
     user: "User"
+    users: "Users"
+    days_visited: "Days Visited"
+    all_yearly_visits: "All Yearly Visits"
     topics: "Topics"
     topic: "Topic"
     likes: "Likes"
