--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -3,6 +3,7 @@ en:
     yearly_review_enabled: "Enable the yearly review."
     yearly_review_categories: "Public categories to pull topics from. The top 5 categories from this group will be selected. If left blank will default to the top 5 public categories."
     yearly_review_exclude_staff: "Exclude Staff from user stats."
+    yearly_review_include_user_stats: "Add user-identifying stats to the first post of the review topic."
     yearly_review_publish_category: "The category the review will be published in."
     yearly_review_featured_badge: "Enter the full badge name. Can be left blank."
   yearly_review:
